[metadata]
name = pytest
description = pytest: simple powerful testing with Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://docs.pytest.org/en/latest/
author = Holger Krekel, Bruno Oliveira, Ronny Pfannschmidt, Floris Bruynooghe, Brianna Laugher, Florian Bruhin and others
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Changelog=https://docs.pytest.org/en/stable/changelog.html
    Twitter=https://twitter.com/pytestdotorg
    Source=https://github.com/pytest-dev/pytest
    Tracker=https://github.com/pytest-dev/pytest/issues

[build-system]
requires = [
  "setuptools>=51.0",
  "wheel>=0.36",
  "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "powerscout/about.py"

[options]
packages =
    powerscout
py_modules = py
install_requires = file:setup-requirements.txt
python_requires = >=3.8
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no

[options.extras_require]
testing = file:test-requirements.txt
devel = file:devel-requirements.txt

[tool:pytest]
addopts = -rsx --tb=short
testpaths = tests
asyncio_mode = auto
junit_family=xunit2
filterwarnings =
  error

[build_sphinx]
source_dir = doc/en/
build_dir = doc/build
all_files = 1

[check-manifest]
ignore =
    powerscout/about.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True

[bdist_wheel]
universal = 1
